--- a/FU_UWP/FU_UWP.csproj
+++ b/FU_UWP/FU_UWP.csproj
@@ -40,6 +40,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -133,6 +134,9 @@
     <Resource Include="images\组成部分\拍照框.png" />
     <Resource Include="images\组成部分\浮生绘.png" />
     <Resource Include="images\组成部分\滑动条.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\图标\返回2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
