--- a/FU_UWP/FU_UWP.csproj
+++ b/FU_UWP/FU_UWP.csproj
@@ -157,6 +157,12 @@
   <ItemGroup>
     <Resource Include="images\图标\撤销.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\组成部分\提示框.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\图标\×.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
