--- a/FU_UWP/FU_UWP.csproj
+++ b/FU_UWP/FU_UWP.csproj
@@ -63,6 +63,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="tiezhikuang.xaml.cs">
+      <DependentUpon>tiezhikuang.xaml</DependentUpon>
+    </Compile>
     <Page Include="dayintishi.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -90,6 +93,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="tiezhikuang.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -212,6 +219,18 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="images\psb.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\图标\对号.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\图标\叉叉.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\图标\叉叉 %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\图标\对号 %281%29.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
